--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@prisma/client": "5.3.1"
+    "@fastify/cors": "^8.4.0",
+    "@prisma/client": "5.3.1",
+    "bcrypt": "^5.1.1",
+    "fastify": "^4.23.2",
+    "zod": "^3.22.2"
   }
 }
