--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node src/server.ts"
+    "dev": "ts-node src/server.ts",
+    "build": "babel src -d dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.23.0",
+    "@babel/core": "^7.23.0",
+    "@babel/preset-env": "^7.22.20",
     "@types/node": "^20.7.0",
     "prisma": "^5.3.1",
     "ts-node": "^10.9.1",
@@ -20,6 +24,7 @@
     "@prisma/client": "5.3.1",
     "bcrypt": "^5.1.1",
     "fastify": "^4.23.2",
+    "vercel": "^32.3.1",
     "zod": "^3.22.2"
   }
 }
